# glm-code-system

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  FINAL_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TEST_RESULTS.md  demo.sh  memories.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  test_system.py  tsconfig.json
agents/: base.ts  learning.ts  planning.ts
cli/: terminal.ts
config/: settings.py  settings.ts
examples/: basic_usage.py
glm_code_system/agents/: base.py  coding.py  learning.py  planning.py
glm_code_system/cli/: terminal.py
glm_code_system/learning/: knowledge_base.py
glm_code_system/tools/: __init__.py  registry.py
glm_code_system/utils/: __init__.py  glm_client.py
src/agents/: coding.ts
src/cli/: index.ts
src/learning/: knowledge-base.ts
src/types/: index.ts
src/utils/: glm-client.ts
tools/: registry.ts
