[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "glm-code-system"
version = "0.1.0"
description = "GLM-powered autonomous coding system with self-learning capabilities"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "glm_code_system"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
rich = "^13.7.0"
textual = "^0.48.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
sentence-transformers = "^2.3.1"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.scripts]
glm-code = "glm_code_system.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
